# GRender

./: .gitignore  CMakeLists.txt  README.md
src/: Context.c  Context.h  CustomVert.c  CustomVert.h  Draw.c  Draw.h  FrameBuffer.c  FrameBuffer.h  MatrixStack.c  MatrixStack.h  Raster.c  Raster.h  Shader.c  Shader.h  Shapes.c  Shapes.h  Types.c  Types.h  Vertex.c  Vertex.h  config.h.in  main.c
